infra/istio/sts-headless-svc/app-network/se-nginx-sts-0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: nginx-sts-0-se
spec:
  hosts:
  - nginx-sts-0.nginx-headless-svc.default.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - name: nginx
    number: 80
    protocol: http
  resolution: DNS
