infra/istio/sts-headless-svc/app-network/vs-nginx-sts-1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-sts-1-vs
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gwr
  #- mesh
  http:
  - match:
    - uri:
        prefix: /nginx-sts-1
      method: 
        exact: GET
    rewrite:
      uri: /
    route:
    - destination:
        host: nginx-sts-1.nginx-headless-svc.default.svc.cluster.local
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: connect-failure,refused-stream,503
